--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -27,7 +27,8 @@ table th {font-weight:bold;}
 table th,
 table td {padding:0.5em 1em;}
 
-table tbody tr:nth-of-type(even) td {background-color:#f5f5f5;}
+table tr:nth-of-type(even) td,
+table tr:nth-of-type(even) th {background-color:#f5f5f5;}
 
 
 
