--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -47,11 +47,97 @@ table tr:nth-of-type(even) th {background-color:#f5f5f5;}
 
 .r3 .box h2 {margin-top:0;}
 
+.r3 .box ul,
+.r3 .box ul li {
+	padding:0; 
+	margin:15px 0 0 0;
+	list-style:none;
+}
+
+.r3 .box ul li {margin:0 0 5px 0;}
+
+.r3 .box ul li a {text-decoration:none;}
+
+.r3 .box-questions ul li {
+	background-image:url(../img/menu-arrow-right.png);
+	background-position:0 .4em;
+	background-repeat:no-repeat;
+	padding:0 0 0 10px;
+}
+
+.r3 .box-downloads ul li {
+	background-image:url(../img/pdf.gif);
+	background-position:0 .2em;
+	background-repeat:no-repeat;
+	padding:0 0 0 22px;
+}
+
+p.box-link {
+	padding:10px 0 0 0;
+	margin:15px 0 0 0;	
+	border-top:1px solid #e7eff7;
+}
+
 .box-alert {
 	background:#f5f5f5;
 	padding:15px 20px;
 	border-radius:5px;	
 }
+
+.box-qual {
+	border:1px solid #a6d0ff;
+	border-radius:5px;
+	padding:0;
+	margin:0 0 30px 0;	
+}
+
+.box-qual-inner {padding:15px 20px 0 20px;}
+
+.box-qual h2 {
+	background:#e7eff7;
+	padding:15px 40px 15px 20px;
+	margin:0;
+	border-radius:5px 5px 0 0;
+	position:relative;
+}
+
+.box-qual.collapsed h2 {border-radius:5px;}
+
+.box-qual h2 a.show-hide {
+	width:16px;
+	height:16px;
+	display:block;
+	position:absolute;
+	top:15px;
+	right:15px;
+	text-indent:-5000em;
+	overflow:hidden;
+	background-color:transparent;
+}
+
+.box-qual h2 a.plus,
+.box-qual h2 a.minus {
+	background-image:url(../img/switch-plus.png);
+	background-position:top left;
+	background-repeat:no-repeat;
+}
+
+.box-qual h2 a.minus {background-image:url(../img/switch-minus.png);}
+
+.box-qual ul.qual-details {
+	margin:0 0 20px 0;
+	padding:0;
+	list-style:none;	
+}
+
+.box-qual ul.qual-details li {
+	display:inline;
+	list-style:none;
+	margin:0 10px 0 0;	
+}
+
+.box-qual ul.qual-details li strong {color:#b52a1e;}
+
 
 
 /**/
@@ -69,6 +155,13 @@ a.ou-btn {
 a.ou-btn:hover {
 	background:#cc3300;
 	color:white;	
+}
+
+p.pdf-download {
+	background-image:url(../img/pdf.gif);
+	background-position:0 .2em;
+	background-repeat:no-repeat;
+	padding:0 0 0 22px;
 }
 
 hr {
