--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -8,7 +8,7 @@ body.ou-wide .r2 { width: 100% }
 
 body.ou-wide .r2 .ou-content {border-radius:0.5em;}
 
-div.inview {padding:1.2em 2em;}
+div.inview {padding:1.4em 2em;}
 
 
 /* tables */
@@ -29,6 +29,38 @@ table td {padding:0.5em 1em;}
 
 table tr:nth-of-type(even) td,
 table tr:nth-of-type(even) th {background-color:#f5f5f5;}
+
+table.qual-progress {margin-bottom:20px;}
+
+table.qual-progress tr:nth-of-type(even) td {background-color:transparent;}
+
+table.qual-progress tr td {
+	text-align:center;
+	color:#888;
+	padding:6px;
+	border-right:1px solid #ddd;
+}
+
+table.qual-progress tr td:last-child {border-right:none;}
+
+table.qual-progress tr {border-bottom:none;}
+
+table.qual-progress div.progress-bar {
+	display:inline-block;
+	height:6px;
+	width:100%;
+	background-color: #ddd;
+	float:left;
+}
+
+table.qual-progress span.progress {
+	display:inline-block;
+	height:6px;
+	background-color: #00CC33;
+	float:left;
+	text-indent:-5000em;	
+}
+
 
 
 /**/
@@ -138,10 +170,30 @@ p.box-link {
 
 .box-qual ul.qual-details li strong {color:#b52a1e;}
 
-
-
 /**/
 
+dl.show-hide {margin:0 0 20px 0;}
+
+dl.show-hide dt {
+	font-weight:bold;
+	color:black;
+	font-family:Arial, Helvetica, sans-serif;
+	padding:5px 0 5px 25px;
+	display:block;
+}
+
+dl.show-hide dt:hover {color:#cc3300;}
+
+dl.show-hide dt.plus,
+dl.show-hide dt.minus {
+	background-image:url(../img/switch-plus.png);
+	background-position:center left;
+	background-repeat:no-repeat;
+	cursor:pointer;
+}
+
+dl.show-hide dt.minus {background-image:url(../img/switch-minus.png);}
+	
 a.ou-btn {
 	display:inline-block;
 	background:#ffc23d;
@@ -162,6 +214,11 @@ p.pdf-download {
 	background-position:0 .2em;
 	background-repeat:no-repeat;
 	padding:0 0 0 22px;
+}
+
+p.loan-text {
+	font-style:italic;
+	color:#555;	
 }
 
 hr {
