--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -172,6 +172,8 @@ p.box-link {
 
 /**/
 
+/* show/hide definition list */
+
 dl.show-hide {margin:0 0 20px 0;}
 
 dl.show-hide dt {
@@ -194,6 +196,10 @@ dl.show-hide dt.minus {
 
 dl.show-hide dt.minus {background-image:url(../img/switch-minus.png);}
 	
+/**/
+
+/* buttons */
+
 a.ou-btn {
 	display:inline-block;
 	background:#ffc23d;
@@ -209,6 +215,10 @@ a.ou-btn:hover {
 	color:white;	
 }
 
+/**/
+
+/* paragraph styles */
+
 p.pdf-download {
 	background-image:url(../img/pdf.gif);
 	background-position:0 .2em;
@@ -216,24 +226,32 @@ p.pdf-download {
 	padding:0 0 0 22px;
 }
 
-p.loan-text {
+p.loan-text,
+p.note {
 	font-style:italic;
 	color:#555;	
 }
 
-hr {
-	border:none;
-	border-top:1px solid #eee;
-	padding:0;
-	margin:30px 0;	
-}
+/**/
 
+
+
+/* headlines */
+
+h2.style1 {
+	background:#e7eff7;
+	color:#000;
+	border-radius:4px;
+	padding:10px 10px;	
+}
 
 h3 {
 	font-size:1.1em;
 	font-weight:bold;
 	color:black;	
 }
+
+/**/
 
 
 /* breadcrumb */
@@ -258,6 +276,35 @@ ol.ou-breadcrumb li {
 
 ol.ou-breadcrumb li:first-child {background-image:none;}
 	
+/**/
+
+/* misc */
+
+.ou-block {
+	margin:0 0 30px 0;	
+}
+
+hr {
+	border:none;
+	border-top:1px solid #eee;
+	padding:0;
+	margin:30px 0;	
+}
+
+ul.list-style1 {
+	padding:0;
+	margin:0 0 20px 0;
+}
+
+ul.list-style1 li {
+	display:inline;
+	list-style:none;
+	margin:0 10px 0 0;	
+}
+
+ul.list-style1 li strong {color:#b52a1e;}
+
+
 /**/
 
 
