--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -257,11 +257,14 @@ h2.style1 {
 	padding:10px 10px;	
 }
 
-h3 {
+h3,
+h4 {
 	font-size:1.1em;
 	font-weight:bold;
 	color:black;	
 }
+
+h4 {font-size:1em;}
 
 /**/
 
