--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -304,6 +304,14 @@ a.bannerhelp {
 	margin:0 0 30px 0;	
 }
 
+.ou-block2 {
+	width:40%;
+	float:left;
+	margin-right:5%;
+}
+
+.ou-block2 p {margin-top:0;}
+
 hr {
 	border:none;
 	border-top:1px solid #eee;
@@ -323,6 +331,28 @@ ul.list-style1 li {
 }
 
 ul.list-style1 li strong {color:#b52a1e;}
+
+ul.list-style2 {
+	padding:0 0 0 20px;
+	margin:0 0 20px 0;
+	list-style:none;
+}
+
+ul.list-style2 li {
+	padding:0;
+	margin:0 0 8px 0;
+	list-style:none;
+}
+
+ul.list-style2 li a {
+	text-decoration:none;
+	color:#039;
+}
+
+ul.list-style2 li a:hover {	color:#cc3300;}
+
+
+
 
 ul.pdf {
 	padding:0;
