--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -32,7 +32,17 @@ table tr:nth-of-type(even) th {background-color:#f5f5f5;}
 
 table.qual-progress {margin-bottom:20px;}
 
-table.qual-progress tr:nth-of-type(even) td {background-color:transparent;}
+table.qual-progress tr:nth-of-type(even) td,
+form.edit-appearance table tr:nth-of-type(even) td {background-color:transparent;}
+
+form.edit-appearance table tr {border:none;}
+
+form.edit-appearance table tr label {
+	font-weight:bold;
+	display:inline-block;
+	margin-bottom:4px;
+}
+
 
 table.qual-progress tr td {
 	text-align:center;
@@ -165,16 +175,16 @@ a.ou-action2:hover .ou-title {color:#cc3300;}
 	border-radius:5px;	
 }
 
-.box-qual {
+.box-expand-collapse {
 	border:1px solid #a6d0ff;
 	border-radius:5px;
 	padding:0;
 	margin:0 0 30px 0;	
 }
 
-.box-qual-inner {padding:15px 20px 0 20px;}
+.box-expand-collapse-inner {padding:15px 20px 0 20px;}
 
-.box-qual h2 {
+.box-expand-collapse h2 {
 	background:#e7eff7;
 	padding:15px 40px 15px 20px;
 	margin:0;
@@ -182,9 +192,9 @@ a.ou-action2:hover .ou-title {color:#cc3300;}
 	position:relative;
 }
 
-.box-qual.collapsed h2 {border-radius:5px;}
+.box-expand-collapse.collapsed h2 {border-radius:5px;}
 
-.box-qual h2 a.show-hide {
+.box-expand-collapse h2 a.show-hide {
 	width:16px;
 	height:16px;
 	display:block;
@@ -196,28 +206,28 @@ a.ou-action2:hover .ou-title {color:#cc3300;}
 	background-color:transparent;
 }
 
-.box-qual h2 a.plus,
-.box-qual h2 a.minus {
+.box-expand-collapse h2 a.plus,
+.box-expand-collapse h2 a.minus {
 	background-image:url(../img/switch-plus.png);
 	background-position:top left;
 	background-repeat:no-repeat;
 }
 
-.box-qual h2 a.minus {background-image:url(../img/switch-minus.png);}
+.box-expand-collapse h2 a.minus {background-image:url(../img/switch-minus.png);}
 
-.box-qual ul.qual-details {
+.box-expand-collapse ul.qual-details {
 	margin:0 0 20px 0;
 	padding:0;
 	list-style:none;	
 }
 
-.box-qual ul.qual-details li {
+.box-expand-collapse ul.qual-details li {
 	display:inline;
 	list-style:none;
 	margin:0 10px 0 0;	
 }
 
-.box-qual ul.qual-details li strong {color:#b52a1e;}
+.box-expand-collapse ul.qual-details li strong {color:#b52a1e;}
 
 /**/
 
@@ -353,7 +363,9 @@ ol.ou-breadcrumb li:first-child {background-image:none;}
 
 /* form elements */
 
-input[type=text] {
+input[type=text],
+input[type=password],
+textarea {
 	padding:6px 12px;	
 	font-size:1em;
 }
@@ -368,6 +380,20 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {border:1px solid #555;}
+
+form.edit-appearance textarea {width:80%;}
+
+input:read-only, 
+textarea:read-only,
+[contenteditable]:read-only {
+	  cursor: not-allowed;
+	  background-color:#eee;
+	  border:1px solid #eee;
+	  padding:6px 12px;	
+	  font-size:1em;
+}
+
+select {font-size:1.3em;}
 
 /**/
 
