--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -164,9 +164,30 @@ a.ou-action2:hover .ou-title {color:#cc3300;}
 
 .box-alert {
 	background:#f5f5f5;
-	padding:20px 20px 15px 20px;
+	padding:20px;
+	margin:0 0 25px 0;
 	border-radius:5px;	
 }
+
+.box-alert2 {
+	border:1px solid #000;
+	padding:15px;
+	margin:0 0 20px 0;	
+}
+
+.box-expand-collapse .box-alert2 h2,
+.box-alert2 h2,
+.box-alert2 h3 {
+	background:none;
+	padding:0;
+	margin:0 0 10px 0;
+	border-radius:0;
+	font-size:1em;
+	font-weight:bold;
+}
+
+.box-alert p:last-child,
+.box-alert2 p:last-child {margin:0;}
 
 .box-expand-collapse {
 	border:1px solid #a6d0ff;
