--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -516,6 +516,14 @@ hr {
 	margin:30px 0;	
 }
 
+.item {
+	border-bottom:1px solid #eee;
+	margin-bottom:30px;
+	padding-bottom:20px;	
+}
+
+.item:last-child {border-bottom:none; margin-bottom:0;}
+
 ul.list-style1 {
 	padding:0;
 	margin:0 0 20px 0;
@@ -548,9 +556,6 @@ ul.list-style2 li a {
 
 ul.list-style2 li a:hover {	color:#cc3300;}
 
-
-
-
 ul.pdf {
 	padding:0;
 	list-style:none;
@@ -568,6 +573,25 @@ ul.pdf li {
 
 
 /**/
+
+/* next module */
+
+.next-module .next-module-time div,
+.next-module .next-module-change div,
+.next-module .next-module-help div {
+	padding-left:25px;
+	background-image:url(../img/icon-clock.png);
+	background-position:top left;
+	background-repeat:no-repeat;	
+}
+
+.next-module .next-module-change div {background-image:url(../img/icon-change.png);}
+
+.next-module .next-module-help div {background-image:url(../img/icon-help.png);}
+
+/**/
+
+
 
 
 /* studenthome edits */
@@ -691,6 +715,12 @@ dl.show-hide dt.plus,
 
 dl.show-hide dt.minus,
 .box-expand-collapse h2 a.minus {background-image:url(../img/switch-minus.png); background-size:16px 16px;}
+
+.next-module .next-module-change div {background-image:url(../img/icon-change.png); background-size:16px 16px;}
+
+.next-module .next-module-help div {background-image:url(../img/icon-help.png); background-size:16px 16px;}
+
+.next-module .next-module-time div {background-image:url(../img/icon-clock.png); background-size:16px 16px;}
 
 
 } /* end media query */
