--- a/css/study-planning.css
+++ b/css/study-planning.css
@@ -461,6 +461,8 @@ textarea {
 	font-size:1em;
 }
 
+textarea {font-family:Arial, Helvetica, sans-serif;}
+
 input[type=submit] {
 	padding:6px 12px;	
 	background:#eee;
